# Cpp-Tanja84dk-Dockerlib

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  Tanja84dkDockerConfig.h.in  tanja84dk_dockerlib_config.h.in  tanja84dk_dockerlib_licenses_macro.h.in
Client/: CMakeLists.txt
Client/cmake/: Findfmt.cmake
Client/src/: client_settings.h  main.cpp  menu.h
ClientTest/: CMakeLists.txt
ClientTest/src/: main.cpp
client_new/: CMakeLists.txt  tanja84dk_dockerclient_httplib_licenses_macro.h.in
client_new/cmake/: tanja84dk_generate_licenses.cmake
client_new/src/: client_parsing.cpp  client_parsing.h  client_tools.cpp  client_tools.h  container.cpp  container.h  license.cpp  license.h  main.cpp  menu.h  network.cpp  network.h  tanja84dk_dockerclient_httplib_licenses_macro.h
cmake/: FindCPMLicenses.cmake.cmake  FindCatch2.cmake  Findargparse.cmake  Findasio.cmake  Findcurl.cmake  Findcxxopts.cmake  Findfmt.cmake  Findgflags.cmake  Findglog.cmake  Findgoogletest.cmake  Findnlohmann_json.cmake  Findtanja84dk_http.cmake  tanja84dk_generate_licenses.cmake  tanja84dk_warnings.cmake
include/Tanja84dk/: DockerClient.h  DockerLib.h  Settings.h  Tanja84dkDocker_pch.h  WebRequests.h  api.h  parser.hpp  time.hpp
include/Tanja84dk/dockerlib/: api.h  docker_client.h  dockerlib.h  license.h  parser.h  settings.h  tanja84dk_dockerlib_pch.h  web_requests.h
include/Tanja84dk/dockerlib/api/: container.h  datatype.h  image.h  network.h
include/Tanja84dk/dockerlib/parser/: container.h  image.h  network.h
include/Tanja84dk/parser/: container.hpp  image.hpp  network.hpp
src/: DockerClient.cpp  docker_client.cpp  license.cpp  license_helper.h  time.cpp
src/api/: container.cpp  datatype.cpp  image.cpp  network.cpp
src/parser/: container.cpp  image.cpp  network.cpp
test/: CMakeLists.txt
test/cmake/: Findgoogletest.cmake
test/src/: main.cpp  main_test.cpp
